WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72277
SecurityContext::isSecureTransitionTo should not refer to empty security origins
https://bugs.webkit.org/show_bug.cgi?id=72277
Summary
SecurityContext::isSecureTransitionTo should not refer to empty security origins
Adam Barth
Reported
2011-11-14 08:48:41 PST
SecurityContext::isSecureTransitionTo should not refer to empty security origins
Attachments
Patch
(1.83 KB, patch)
2011-11-14 08:50 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-11-14 08:50:42 PST
Created
attachment 114956
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-11-14 12:44:51 PST
Comment on
attachment 114956
[details]
Patch OK.
Adam Barth
Comment 3
2011-11-14 12:56:25 PST
Comment on
attachment 114956
[details]
Patch Clearing flags on attachment: 114956 Committed
r100181
: <
http://trac.webkit.org/changeset/100181
>
Adam Barth
Comment 4
2011-11-14 12:56:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug