SecurityContext::isSecureTransitionTo should not refer to empty security origins https://bugs.webkit.org/show_bug.cgi?id=72277

Reviewed by Eric Seidel.

Now that we're tracking the "failed to initialized SecurityOrigin"
state explicitly, we should use that to determine whether we can make a
secure transition.

* dom/SecurityContext.cpp:
(WebCore::SecurityContext::isSecureTransitionTo):


Canonical link: https://commits.webkit.org/88735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100181 268f45cc-cd09-0410-ab3c-d52691b4dbfc